production/observability/resources/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: default
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - grafana.clusters.zjusct.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
