production/observability/resources/prometheus-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: observability
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: default
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - prometheus.clusters.zjusct.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-server
          port: 80
